examples/negative/pub_enforcement/priv_field_external_construct/main.kai
# Negative fixture (priv-fields lane): constructing a record from
# outside its declaring module is rejected when the literal names
# a `priv` field. The user must go through a constructor fn that
# the owning module exposes.

import lib

fn main() : Int = {
  let _b = Box { secret: 99 }    # ← reject: `secret` is priv in module `lib`
  0
}
